--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,4 +16,4 @@ Changelog:
 
 1.04 (September 30, 2015): Updated wkt2csv.py to include option -t LINESTRING_XYZ used to extract nodes from the pputils formatted lines file.
 
-1.05 (October 31, 2015): Updated probe.py to work better when result files have small number of time steps; added a transp.py script that interpolates result files from one mesh onto another (for a specified time step); added assign.py to assign attributes defined by polygon boundaries to the mesh nodes; added to wkt2csv.py -t POLYGON, t POLYGON_XYZ and -t POLYGON_ATTR (required by assign.py) as options; added adcirc2slf_stbtel.py that uses stbtel to convert from ascirc to *.slf mesh formats; added sel2vtk.py script that converts the Telemac's selafin results file to paraview's vtk format; added adcirc2vtk.py for visualizing TINs in Paraview; added sel2plot_1d.py for plotting cross sections and profiles from *.slf result files..
+1.05 (October 31, 2015): Updated probe.py to work better when result files have small number of time steps; added a transp.py script that interpolates result files from one mesh onto another (for a specified time step); added assign.py to assign attributes defined by polygon boundaries to the mesh nodes; added to wkt2csv.py -t POLYGON, t POLYGON_XYZ and -t POLYGON_ATTR (required by assign.py) as options; added adcirc2slf_stbtel.py that uses stbtel to convert from ascirc to *.slf mesh formats; added sel2vtk.py script that converts the Telemac's selafin results file to paraview's vtk format; added adcirc2vtk.py for visualizing TINs in Paraview; added sel2plot_1d.py for plotting cross sections and profiles from *.slf result files.
