--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,4 +20,4 @@ Change-log:
 
 1.06 (February 22, 2016): Significant changes since last version; various improvements and code cleanup; complete re-write of the *.slf reader and writer class via module selafin_io_pp.py; added support for writing *.flt binary files; finished adcirc2slf.py script (no longer rely on stbtel for format conversions); added support for converting unstructured SWAN output to *.vtk for visualization via paraview; changed progressbar module; made all scripts in pputils work under python 2 and 3.
 
-1.07 (April 7, 2017): Major updates to the code base; number of scripts increased nearly by double compared to previous version; added an ability to read and write ESRI Shapefiles (using pyshp module); added point and line cropping scripts; added ability to retain a specified time step from a SELAFIN file (for use in hot-starting); added an ability to extract data form a SELAFIN file using points and lines; cleanup the interpolation scripts (everything now uses Scipy's cKDTree); added the code to generate and manage wave libraries; added a first version of the manual.
+1.07 (April 7, 2017): Major updates to the code base; number of scripts increased nearly by double compared to previous version; added an ability to read and write ESRI Shapefiles (using pyshp module); added point and line cropping scripts; added ability to retain a specified time step from a SELAFIN file (for use in hot-starting); added an ability to extract data form a SELAFIN file using points and lines; cleaned up the interpolation scripts (everything now uses Scipy's cKDTree); added the code to generate and manage wave libraries; added a first version of the manual.
